--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -25,7 +25,7 @@
                     <div class="navbar-collapse collapse" id="mainnav" > 
                         <ul class="navbar-nav ml-auto py-4 py-md-0">
                         
-                            <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 menu-active">
+                            <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                 <a class="nav-link" href="#home">Home</a>
                             </li>
                             <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
