--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -24,7 +24,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="navbar-collapse collapse" id="mainnav" > 
-                        <ul class="navbar-nav ml-auto py-4 py-md-0">
+                        <ul class="navbar-nav mx-auto py-4 py-md-0">
                         
                             <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                 <a class="nav-link" href="#home">Home</a>
@@ -40,10 +40,7 @@
                             </li>
                             <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                 <a class="nav-link" href="#contact">Contact</a>
-                            </li>
-                            <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                <a class="nav-link" [routerLink]="['/blog']" onclick="window.scrollTo(0, 0)">Blog</a>
-                            </li>
+                            </li> 
                         </ul>
                     </div>
                     <div class="navbar-right" >
