--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -27,19 +27,19 @@
                         <ul class="navbar-nav mx-auto py-4 py-md-0">
                         
                             <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                <a class="nav-link" href="#home">Home</a>
+                                <a class="nav-link" routerLink="/">Home</a>
                             </li>
                             <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                <a class="nav-link" href="#features">Features</a>
+                                <a class="nav-link" routerLink="/">Features</a>
                             </li> 
                             <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                <a class="nav-link" href="#reviews">Reviews</a>
+                                <a class="nav-link" routerLink="/">Reviews</a>
                             </li>
                             <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                <a class="nav-link" href="#pricing">Pricing</a>
+                                <a class="nav-link" routerLink="/">Pricing</a>
                             </li>
                             <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                <a class="nav-link" href="#contact">Contact</a>
+                                <a class="nav-link" routerLink="/">Contact</a>
                             </li> 
                         </ul>
                     </div>
