--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -56,9 +56,9 @@
             <div class="col-md-6">
                 <div style="height:100vh;position: relative;" >
                     <div class="center-content">
-                        <h1 style="color: #fff;">Track Sales and Manage Inventory Effectively</h1>
-                        <p>A simple tool that will enhance your business operation. Sign up now and start your free online trial today, no credit card needed.  </p>
-                        <div >
+                        <h1 style="color: #fff;" class="wow fadeIn">Track Sales and Manage Inventory Effectively</h1>
+                        <p class="wow fadeIn">A simple tool that will enhance your business operation. Sign up now and start your free online trial today, no credit card needed.  </p>
+                        <div class="wow bounceInUp">
                             <br/>
                             <button class="btn btn-default" routerLink="/signup">Try Free</button> &nbsp; <button (click)="buyNow(2)" class="btn btn-primary">Buy Now</button>
                         </div>
@@ -67,13 +67,31 @@
             </div>
             <div class="col-md-6">
                 <div class="center-content">
-                    <img class="img-fluid" style="margin-top:13vh;" src="/assets/images/right.png" />
+                    <img class="img-fluid wow fadeInRight" style="margin-top:13vh;" src="/assets/images/right.png" />
                 </div>
             </div>
         </div>
      </div>
 </section>
-
+<section id="featured">
+    <div class="container"> 
+        <div class="row">
+            <div class="col-lg-6">
+                <h2 class="section-header  wow bounceInUp">Trusted By 7th Grocery Store</h2>
+                <figure class="wow fadeInLeft">
+                    <blockquote>&ldquo;POSLite is the perfect solution for our grocery store to take its sales to the next level. The software is user-friendly and easy to use, and it's also customizable to fit our specific needs. Plus, the fast support is a huge bonus. With POSLite, I can view sales anywhere I go and keep track of inventory in real-time.&rdquo;</blockquote>
+                    <footer>
+                        — <cite class="author">Mike Binoya</cite>, <cite class="company">Seventh Grocery Store</cite>
+                    </footer>
+                </figure>
+            </div>
+            <div class="col-lg-6">
+                <img class="wow fadeInRight" src="../../assets/images/seventh.jpeg" width="100%" />
+            </div>
+            
+        </div>
+    </div>
+</section>
 <section id="features">
     <div class="container  ">
         <header>
@@ -628,7 +646,7 @@
         <div class="wow zoomIn" data-wow-delay="0.5s">
             <header class="container text-center">
                 <h2 class="section-header">MORE THAN 100 STORE USE POSLITE</h2>
-                <p class="lead">Number of happy POSLite users in different regions of the Philippines</p>
+                <p class="lead">Number of happy POSLite users in the Philippines</p>
             </header>
             <div class="container">
                 <div id="counter">
