responsive featured image

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -67,7 +67,7 @@
             </div>
             <div class="col-md-6">
                 <div class="center-content">
-                    <img class="img-fluid wow fadeInRight" style="margin-top:13vh;" src="/assets/images/right.png" />
+                    <img class="img-fluid wow fadeInRight" style="margin-top:13vh;width: 100%;" src="/assets/images/right.png" />
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
                 </figure>
             </div>
             <div class="col-lg-6">
-                <img class="wow fadeInRight" src="../../assets/images/seventh.jpeg" width="100%" />
+                <img  class="wow fadeInRight" src="../../assets/images/seventh.jpeg" width="100%" />
             </div>
             
         </div>
