add pricing json file to load price dynamically

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -518,8 +518,7 @@
                                     <s>₱10,999</s>
                                     <span class="price">
                                         <span class="sign">₱</span>
-                                        <span class="currency">3,499</span>
-                                        <span class="cent">.00</span> 
+                                        <span class="currency">{{price.pricing.bronze}}</span> 
                                     </span>
                                 </div>
                                 <!--//PRICE END-->
@@ -566,8 +565,7 @@
                                     <s>₱15,599</s>
                                     <span class="price">
                                         <span class="sign">₱</span>
-                                        <span class="currency">5,699</span>
-                                        <span class="cent">.75</span> 
+                                        <span class="currency">{{price.pricing.silver}}</span> 
                                     </span>
                                 </div> 
                                 
@@ -609,8 +607,7 @@
                                     <s>₱28,999</s>   
                                     <span class="price">
                                         <span class="sign">₱</span>
-                                        <span class="currency">8,999</span>
-                                        <span class="cent">.75</span> 
+                                        <span class="currency">{{price.pricing.gold}}</span> 
                                     </span>
                                 </div> 
                                 
